Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127619

FileDialog prints binding loop warning when opened.

XMLWordPrintable

    • All
    • 036beb996 (dev), ee1fa0481 (6.8), 85f768102 (6.7), c0b0df39a (tqtc/lts-6.5)

      The fix for QTBUG-119916 introduced a binding loop, which has not yet been fixed.

        1. BasicFileDialogOCD.png
          103 kB
          Oliver Eftevaag
        2. FusionFileDialogOCD.png
          126 kB
          Oliver Eftevaag
        3. ImagineFileDialogOCD.png
          104 kB
          Oliver Eftevaag
        4. MaterialFileDialogOCD.png
          120 kB
          Oliver Eftevaag
        5. UniversalFileDialogOCD.png
          117 kB
          Oliver Eftevaag
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hurlevent Oliver Eftevaag
            hurlevent Oliver Eftevaag
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes